adding images to html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <h1>Udemy Angular Course</h1>
+<nav>
+  <ul class="pagination">
+    <li class="page-item">
+      @for (image of images; track image;) {
+      <a class="page-link"></a>
+      }
+    </li>
+  </ul>
+</nav>
 <section>
-  
+
 </section>
