--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <nav>
   <ul class="pagination">
     <li class="page-item">
-      @for (image of images; track image;) {
-      <a class="page-link"></a>
+      @for (image of images; track image; let i = $index;) {
+      <a class="page-link">{{ i }}</a>
       }
     </li>
   </ul>
