--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <ul class="pagination">
     <li class="page-item">
       @for (image of images; track image; let i = $index;) {
-      <a class="page-link">{{ i }}</a>
+      <a class="page-link">{{ i + 1 }}</a>
       }
     </li>
   </ul>
