--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <h1>Udemy Angular Course</h1>
 <nav>
   <ul class="pagination">
-    <li class="page-item">
-      @for (image of images; track image; let i = $index;) {
+    @for (image of images; track image; let i = $index;) {
+    <li 
+    class="page-item"
+    [ngClass]="{active : i === currentPage}">
       <a class="page-link">{{ i + 1 }}</a>
-      }
     </li>
+  }
   </ul>
 </nav>
 <section>
