--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,23 @@
 <h1>Udemy Angular Course</h1>
 <nav>
   <ul class="pagination">
+    <li 
+    class="page-item"
+    [ngClass]="{disabled : currentPage === 0}">
+      <a class="page-link">Prev</a>
+    </li>
     @for (image of images; track image; let i = $index;) {
     <li 
     class="page-item"
     [ngClass]="{active : i === currentPage}">
       <a class="page-link">{{ i + 1 }}</a>
     </li>
-  }
+    }
+    <li 
+    class="page-item"
+    [ngClass]="{disabled : currentPage === images.length -1}">
+      <a class="page-link">Next</a>
+    </li>
   </ul>
 </nav>
 <section>
