--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <ul class="pagination">
     <li 
     class="page-item"
-    [ngClass]="{disabled : currentPage === 0}">
+    [ngClass]="{disabled : currentPage === 0}"
+    (click)="currentPage = currentPage -1">
       <a class="page-link">Prev</a>
     </li>
     @for (image of images; track image; let i = $index;) {
@@ -19,7 +20,8 @@
     }
     <li 
     class="page-item"
-    [ngClass]="{disabled : currentPage === images.length -1}">
+    [ngClass]="{disabled : currentPage === images.length -1}"
+    (click)="currentPage = currentPage +1">
       <a class="page-link">Next</a>
     </li>
   </ul>
