--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <a class="page-link">Prev</a>
     </li>
     @for (image of images; track image; let i = $index;) {
-      @if (i < 5) {
+      @if (checkWindowIndex(i)) {
         <li 
         class="page-item"
         [ngClass]="{active : i === currentPage}">
