--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,5 +32,13 @@
   <div>
     <h4>{{ images[currentPage].title }}</h4>
     <img [src]="images[currentPage].url"/>
+  </div>
+  <div [ngSwitch]="currentPage">
+    <div *ngSwitchCase="0">
+      current page is 0
     </div>
+    <div *ngSwitchDefault>
+      current page is not 0
+    </div>
+  </div>
 </section>
